# fmg_ws

./: frames_2024-10-07_19.48.33.gv
src/RealTimeFmgPrediction_pkg/: package.xml  setup.cfg  setup.py
src/RealTimeFmgPrediction_pkg/RealTimeFmgPrediction_pkg/: RealTimeFmgPredictionNode.py
src/RealTimeFmgPrediction_pkg/config/: RealTimeConfig.yaml
src/RealTimeFmgPrediction_pkg/launch/: RealTimeFmgPredictionNode.launch.py
src/collision_pkg/: CMakeLists.txt  package.xml
src/collision_pkg/collision_pkg/: OptiTrackPubNode.py
src/collision_pkg/launch/: ArmMoverWithCollision.launch.py  CollisionChecker.launch.py  CollisionCheckerFmg.launch.py  CollisionCheckerlaunch.launch.py  CollisionObjUpdater.launch.py  CollisionObjUpdaterFmg.launch.py  CollisionObjUpdaterOpti.launch.py
src/collision_pkg/src/: ArmMoverWithCollision.cpp  ArmMoverWithCollisionNode.cpp  CollisionCheckerNode.cpp  CollisionObjUpdater.cpp  HollowBoxPub.cpp  MarkerLinePub.cpp
src/custom_msg/: CMakeLists.txt  package.xml
src/custom_msg/msg/: ArmPositions.msg
src/natnet_pub_pkg/: package.xml  setup.cfg  setup.py
src/natnet_pub_pkg/natnet/: NatnetReader.py
src/natnet_pub_pkg/natnet_pub_pkg/: OptiTrackPubNode.py
src/real_time_fmg_prediction_pkg/: package.xml  setup.cfg  setup.py
src/real_time_fmg_prediction_pkg/config/: RealTimeConfig.yaml
src/real_time_fmg_prediction_pkg/launch/: RealTimeFmgPredictionNode.launch.py
src/real_time_fmg_prediction_pkg/models/: models.py  transformer_model.py
src/real_time_fmg_prediction_pkg/natnet/: NatNetClient.py  NatnetReader.py
src/real_time_fmg_prediction_pkg/real_time_fmg_prediction_pkg/: RealTimeFmgPredictionNode.py
src/real_time_fmg_prediction_pkg/saved_models/transformer_model/: TransformerModel_epoch_9.txt  TransformerModel_epoch_9_date_07_10_11_36.pt
src/utils_pkg/: package.xml  setup.cfg  setup.py
src/utils_pkg/utils_pkg/: frame_listener.py
